# app/controllers/sms.go
@@ -20,9 +20,9 @@ type SendCodeForm struct {
 // @Produce  json
 // @Param deviceid header string false "设备ID"
 // @Param mobile formData string true "手机号"
-// @Failure 400 {object} utils.SKELETON "参数错误"
+// @Failure 400 {object} utils.JSON_STRUCT "参数错误"
 // @Failure 1 {object} string "发送达到上限"
-// @Success 0 {object} UserSwagger "发送成功"
+// @Success 0 {object} utils.JSON_STRUCT "发送成功"
 // @Router /api/sms [POST]
 func SendCode(c *gin.Context) {
 	var form SendCodeForm
@@ -30,18 +30,20 @@ func SendCode(c *gin.Context) {
 		c.JSON(http.StatusOK, gin.H{"code": 400, "msg": err.Error()})
 		return
 	}
-	ok, reason := services.LimitSmsSend(form.Mobile, form.DeviceID, c.ClientIP())
+	ok, reason := services.LimitSMSSend(form.Mobile, form.DeviceID, c.ClientIP())
 	if !ok {
 		c.JSON(http.StatusOK, gin.H{"code": 1, "msg": reason})
 		return
 	}
-
+	code := utils.RandNumbers(6)
 	sms := models.SMSCode{
 		Mobile: form.Mobile,
 		Device: form.DeviceID,
 		IP: c.ClientIP(),
-		Code: utils.RandNumbers(6),
+		Code: code,
 	}
 	global.DB.Create(&sms)
+
+	services.SendCodeSMS(form.Mobile, code)
 	c.JSON(http.StatusOK, gin.H{"msg": "ok"})
 }
