# docs/swagger.json
@@ -38,31 +38,31 @@
                     "20001": {
                         "description": "Token鉴权失败",
                         "schema": {
-                            "$ref": "#/definitions/utils.SKELETON"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     },
                     "20002": {
                         "description": "Token已超时",
                         "schema": {
-                            "$ref": "#/definitions/utils.SKELETON"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     },
                     "20004": {
                         "description": "Token错误",
                         "schema": {
-                            "$ref": "#/definitions/utils.SKELETON"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     },
                     "20005": {
                         "description": "Token参数不能为空",
                         "schema": {
-                            "$ref": "#/definitions/utils.SKELETON"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     },
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "$ref": "#/definitions/utils.SKELETON"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     }
                 }
@@ -103,7 +103,7 @@
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "$ref": "#/definitions/utils.SKELETON"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     }
                 }
@@ -138,7 +138,7 @@
                     "0": {
                         "description": "发送成功",
                         "schema": {
-                            "$ref": "#/definitions/controllers.UserSwagger"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     },
                     "1": {
@@ -150,7 +150,7 @@
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "$ref": "#/definitions/utils.SKELETON"
+                            "$ref": "#/definitions/utils.JSON_STRUCT"
                         }
                     }
                 }
@@ -198,7 +198,7 @@
                 }
             }
         },
-        "utils.SKELETON": {
+        "utils.JSON_STRUCT": {
             "type": "object",
             "properties": {
                 "code": {
